temp fix blob animation on safari

--- a/app/globals.css
+++ b/app/globals.css
@@ -272,6 +272,11 @@ p {
   z-index: 2;
 }
 
+/* #blobSvg{
+  width: 500px;
+  height: 500px;
+} */
+
 @media screen and (max-width: 767px) {
   .blob {
     position: absolute;
